# LabWork6

Task1/: CMakeLists.txt  io.cpp  main  main.cpp  solve.cpp  solve.h  testing.cpp
Task2/: CMakeLists.txt  main  main.cpp  solve.cpp  solve.h  testing.cpp
Task3/: CMakeLists.txt  main  main.cpp  solve.cpp  solve.h  testing.cpp
